--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="flex gap-5 flex-col md:flex-col lg:flex-row justify-between">
         <div
           class="card card-compact w-fit mx-6 px-4 md:w-fit lg:w-96 bg-base-100 pt-5 shadow box-primary-shadow border-2 border-dashed my-20">
-          <figure><img src="/images/others/latest1.png" class="md:w-full lg:w-full" /></figure>
+          <figure><img src="./images/others/latest1.png" class="md:w-full lg:w-full" /></figure>
           <div class="card-body">
             <h2 class="card-title text-3xl font-semibold font_poppins">Ducati XDIAVEL S-73</h2>
             <p class="text-lg text-[#6C6C6C] font-normal my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -192,7 +192,7 @@
         </div>
         <div
           class="card card-compact w-fit mx-6 px-4 md:w-fit lg:w-96 bg-base-100 pt-5 shadow box-primary-shadow border-2 border-dashed my-20">
-          <figure><img src="/images/others/latest1.png" class="md:w-full lg:w-full" /></figure>
+          <figure><img src="./images/others/latest1.png" class="md:w-full lg:w-full" /></figure>
           <div class="card-body">
             <h2 class="card-title text-3xl font-semibold font_poppins">Ducati XDIAVEL S-73</h2>
             <p class="text-lg text-[#6C6C6C] font-normal my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -204,7 +204,7 @@
         </div>
         <div
           class="card card-compact w-fit mx-6 px-4 md:w-fit lg:w-96 bg-base-100 pt-5 shadow box-primary-shadow border-2 border-dashed my-20">
-          <figure><img src="/images/others/latest1.png" class="md:w-full lg:w-full" /></figure>
+          <figure><img src="./images/others/latest1.png" class="md:w-full lg:w-full" /></figure>
           <div class="card-body">
             <h2 class="card-title text-3xl font-semibold font_poppins">Ducati XDIAVEL S-73</h2>
             <p class="text-lg text-[#6C6C6C] font-normal my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -225,7 +225,7 @@
       <div class="flex flex-col md:flex-col lg:flex-row justify-around">
         <div class="card mx-7 bg-base-100 shadow-box-primary-shadow border-2 border-dashed my-10">
           <figure class="px-10 pt-10">
-            <img src="/images/others/user-1.png" class="rounded-xl" />
+            <img src="./images/others/user-1.png" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <p class="text-lg text-[#6C6C6C] font-normal font_poppins">Slate helps you see how
@@ -245,7 +245,7 @@
         </div>
         <div class="card mx-7 bg-base-100 shadow-box-primary-shadow border-2 border-dashed my-10">
           <figure class="px-10 pt-10">
-            <img src="/images/others/user-2.png" class="rounded-xl" />
+            <img src="./images/others/user-2.png" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <p class="text-lg text-[#6C6C6C] font-normal font_poppins">Slate helps you see how
@@ -265,7 +265,7 @@
         </div>
         <div class="card mx-7 bg-base-100 shadow-box-primary-shadow border-2 border-dashed my-10">
           <figure class="px-10 pt-10">
-            <img src="/images/others/user-3.png" class="rounded-xl" />
+            <img src="./images/others/user-3.png" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <p class="text-lg text-[#6C6C6C] font-normal font_poppins">Slate helps you see how
